--- a/index.html
+++ b/index.html
@@ -442,6 +442,17 @@
 
     <script>
         const videos = [
+            {
+    id: 113,
+    title: "පාර්ක් එකේ ගත්තු සැප",
+    description: "New video upload",
+    videoUrl: "https://luluvid.com/i7i6064bc2u8",
+    thumbnail: "https://img.lulucdn.com/i7i6064bc2u8_t.jpg",
+    duration: "01:25",
+    views: 1090,
+    uploadDate: "Today",
+    category: "entertainment"
+},
           {
     id: 108,
     title: "SriLanka Model Leak - Kevin AJ Fking Hard",
@@ -1709,4 +1720,5 @@
 
    </script>
 </body>
+
 </html>
